--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -17,7 +17,7 @@
   bottom: -14px;
   padding: 5px;
   background: #222629;
-  content: "React me 😁";
+  content: "Contact me 😁";
   color: #86c232;
   font-size: 20px;
   /* width: 300px; */
